--- a/package.json
+++ b/package.json
@@ -12,13 +12,11 @@
   "contributors": [],
   "dependencies": {
     "discord.js": "^11.4.2",
-    "discord.js                |||": "11.4.2   |||",
     "random-words": "^1.1.0",
-    "random-words              ||": "1.1.0    ||"
   },
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js node bot",
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
