--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "golden_eagle_spam",
+  "name": "golden-eagle-spam",
   "version": "1.0.0",
-  "keywords": [
-    "util",
-    "functional",
-    "server",
-    "client",
-    "browser"
-  ],
-  "author": "Nedal",
-  "contributors": [],
+  "description": "spam",
+  "main": "bot.js",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "random-words": "^1.1.0",
+    "random-words": "^1.1.0"
   },
-  "main": "bot.js",
+  "devDependencies": {},
   "scripts": {
-    "start": "node bot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node bot.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nedal235/Golden-eagle-spam.git"
+  },
+  "author": "Nedal",
   "license": "ISC",
-  "description": ""
+  "bugs": {
+    "url": "https://github.com/nedal235/Golden-eagle-spam/issues"
+  },
+  "homepage": "https://github.com/nedal235/Golden-eagle-spam#readme"
 }
